	             at it duplicated in 3 different places.
October 20-22    2004 - Fix defect 145: Spaces and special characters in names
                      can make saveall loadall fail miserably...and other misc.
                      things uncovered while repairing the defect.
October 25,26    2004 - Optimize 1d long histogram increments.  Note that many
                      but not all changes will help 2d word increments too, but
                     these (less often used) histograms won't get full benefit
                     as there are modifications to the Spectrum1DL file that
		     are deliberately not propagated back to Spectrum1DW
October 27,      2004 -Optimize2d short histogram increments

November 3,2004 - Fixed position computations on expanded spectra.
November 4,2004 - Fixed defect 60 in Xamine: Spectrum choosers should come out
                 sorted by name.
November 102004 - Repaired defect 147: Xamine copy object copies to wrong
                  spectrum if slot # > 999

Edit level 2.2-001
November 30, 2004 
	- Forward port fix to defect 151 from 2.1:
             colorscales on griprint were way off for 2-d prints.
        - Fix unnumbered defect: channel get/set broke for 2-d gamma 
          spectra starting with SpecTcl 2.2
                  spectrum if slot # > 999

SpecTcl 3.0: 
      Port to gcc/g++ 3.x:
         o Lots of gruntwork with config.h etc. in all sources.
         o Added Tcl Channel inquiry functions to CTCLInterpreter to
	   allow the location of Tcl_Channel given it's name.
	    GetChannel
	    GetChannelNames
         o Added CTCLChannel object that can do simple channel operations.
            Read
	    Write
	    atEof
	    Flush
            Close
         o In {Write,Read}Command.cpp  use tcl[io]streams to connect
           swrite/sread to Tcl channel parameters rather than decoding the
	   filename.
      Propagate fix for defect 151 from 2.1 -> 2.2-> 3.0
      